feat: stream deployment logs
