# api/docs/swagger.json
@@ -414,8 +414,8 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Wait for deployment completion",
-                        "name": "waitForDeployment",
+                        "description": "Stream logs",
+                        "name": "stream",
                         "in": "query"
                     }
                 ],
